Changelog
=========

v1.2
----

- Ensure master connection connects to the correct database name when TEST_NAME is not defined.
- Connection.close() will now reset adoConn to make sure it's gone before the CoUninitialize.
- Changed provider default from 'SQLOLEDB' to 'SQLNCLI10' with MARS enabled.
- Added :ref:`rawstoredproceduremanager`, which provides ``raw_callproc`` that works the same as ``raw``, except
  expects the name of a stored procedure that returns a result set that matches the model.

v1.1
----

- Updated SQLInsertCompiler to work with Django 1.4
- Added support for ``disable_constraint_checking``, which is required for ``loaddata`` to work properly.
- Implemented ``DatabaseOperations.date_interval_sql`` to allow using expressions like ``end__lte=F('start')+delta``.
- Fixed date part extraction for ``week_day``.
- DatabaseWrapper reports vendor as 'microsoft'.
- AVG function now matches core backend behaviors and will auto-cast to ``float``, instead of maintaining datatype. 
  Set database ``OPTIONS`` setting ``disable_avg_cast`` to turn off the auto-cast behavior.
- StdDev and Variance aggregate functions are now supported and will map to the proper MSSQL named functions. Includes work around for Django ticket `#18334`_.
- Monkey patched ``django.db.backends.util.CursorWrapper`` to allow using cursors as ContextManagers in Python 2.7. Django Ticket `#17671`_.

.. _`#17671`: https://code.djangoproject.com/ticket/17671
.. _`#18334`: https://code.djangoproject.com/ticket/18334